delete start option for opensearch